<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_discovery" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
